--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,16 +9,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.lsx.activitylifecycle.MainActivity">
 
+    <Button
+        android:id="@+id/activity_main_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="启动第二个Activity"
+        android:layout_weight="1"/>
+
     <EditText
 
         android:id="@+id/activity_main_edit_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
-    <Button
-        android:id="@+id/activity_main_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Sencond Button"
-        android:layout_weight="1"/>
 </LinearLayout>
