--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,19 +7,25 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.example.lsx.activitylifecycle.MainActivity">
 
     <Button
         android:id="@+id/activity_main_button"
-        android:layout_width="0dp"
+       android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="启动第二个Activity"
-        android:layout_weight="1"/>
+        />
 
     <EditText
 
         android:id="@+id/activity_main_edit_text"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        />
+    <Button
+        android:id="@+id/activity_main_third_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Start Third"/>
 </LinearLayout>
